--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+//Definimos los colores a utilizar
+
+$primary-color:#0E8686;
+
+
+
+
+
+footer{
+    
+}
