--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,10 @@
   <div class="container">
       <div class="jumbotron">
           <h1>{{title}}</h1>
-          <p>...</p>
+          
+          <!--Componente de receta-->
+          <app-receta></app-receta>
+          
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
         </div>
   </div>
