--- a/src/app/receta/receta.component.scss
+++ b/src/app/receta/receta.component.scss
@@ -24,7 +24,11 @@
         padding: 5px 0;
         border-top: 1px solid grey;
         border-bottom: 1px solid grey;
-    }    
+    }  
+    .acordeon{
+        float: right;
+        border: none;
+    }  
 }
 
 p{
