--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- Fixed navbar -->
+<!-- navbar -->
 <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -13,22 +13,17 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li routerLinkActive="class"><a [routerLink]="['home']">Home</a></li>
+          <li routerLinkActive="class"><a [routerLink]="['receta']">Receta</a></li>
+          <li routerLinkActive="class"><a [routerLink]="['propiedades']">Propiedades</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
-  </nav>
-<!--fixed nav-->
+  </nav><!-- nav-->
+  
   <!-- Begin page content -->
   <div class="container">
-      <div class="jumbotron">
-          <h1>{{title}}</h1>
-          
-          <!--Componente de receta-->
-          <app-receta></app-receta>
-          
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-        </div>
+    <router-outlet></router-outlet>
   </div>
 
   <footer class="footer">
