--- a/src/app/receta/receta.component.html
+++ b/src/app/receta/receta.component.html
@@ -13,17 +13,15 @@
             <span class="label label-primary likes" (click)="sumarLike()">{{likes}} Likes</span>  
           </p>
           <section class="ingredientes"> 
-            <h4 (click)="mostrarIngredientes()">Ingredientes:
-              <span class="glyphicon {{arrow}} "></span>
+            <h4 (click)="showIngredientes()">Ingredientes:
+              <span class="badge">{{ingredientes.length}}</span> <!--Badges o burbujas para contar el número de ingredientes-->
+              <span class="glyphicon {{glyphicon}}" aria-hidden="true"></span>
             </h4>
-            <div class="panel" *ngIf="show">
-                <ol>
+              <ol *ngIf="show">
                     <li  *ngFor="let ingre of ingredientes">
                      {{ingre}}
                     </li>
                   </ol>
-              </div>
-          
           </section>
         </div>
       </div>
