--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,10 @@
-<h2>HOME</h2>
-<p>Página principal para el primer ejercicio de Angular.</p>
+<div class="jumbotron">
+  <div class="container">
+      <h1>Bienvenido a Angular</h1>
+      <p>Página principal para el primer ejercicio de Angular.</p>
+      <img src="https://qph.fs.quoracdn.net/main-qimg-f40e84f64699679e22772d072d2961f8" alt="angular">
+  </div>
+</div>
+
+
+
