--- a/src/app/page404/page404.component.html
+++ b/src/app/page404/page404.component.html
@@ -1,3 +1,7 @@
-<p>
-  Página no Encontrada 404
-</p>
+<div class="jumbotron">
+    <div class="container">
+      <h2>Página no encontrada</h2>
+      <h4>Error 404</h4>
+      <p>La página solicitada no se encuentra disponible. Asegurese de escribir bien la dirección.</p>
+    </div>
+  </div>
