--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,9 +13,10 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li routerLinkActive="class"><a [routerLink]="['home']">Home</a></li>
-          <li routerLinkActive="class"><a [routerLink]="['receta']">Receta</a></li>
-          <li routerLinkActive="class"><a [routerLink]="['propiedades']">Propiedades</a></li>
+          <!--<li routerLinkActive="class"><a [routerLink]="['home']">Home</a></li>-->
+          <li routerLinkActive="active" class="menu"><a [routerLink]="['receta']">Receta</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['propiedades']">Propiedades</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['usuario']">Usuario</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
