--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
           <li routerLinkActive="active" class="menu"><a [routerLink]="['receta']">Receta</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['propiedades']">Propiedades</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['usuario']">Usuario</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['concesionario']">Concesionario</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
