--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,7 +1,19 @@
+{{usuario.json}}
 <div class="jumbotron">
     <div class="container">
-        <h1>Bienvenido a Angular</h1>
-        <p>Página principal para el primer ejercicio de Angular.</p>
-        <img src="https://qph.fs.quoracdn.net/main-qimg-f40e84f64699679e22772d072d2961f8" alt="angular">
+            <div class="row">
+                    <div class="col-sm-6 col-md-4">
+                      <div class="thumbnail">
+                        <img src="{{usuario.avatar}}" alt="{{usuario.avatar}}" >
+                        <div class="caption">
+                          <h3>{{usuario.nombre}}{{usuario.apellido}}</h3>
+                          <p><span class="email">.&nbsp;{{usuario.email}}</span></p>
+                          
+                        </div>
+                      </div>
+                    </div>
+                  </div>  
     </div>
   </div>
+
+  
