--- a/src/app/concesionario/concesionario.component.html
+++ b/src/app/concesionario/concesionario.component.html
@@ -2,4 +2,27 @@
 <p>Ejemplo de un componente padre <b>ConcesionarioComponent</b> e hijo <b>CocheComponent</b>
 y aprender a pasar parametros de uno a otro con <code>@input</code><code>@output</code></p>
 
+<nav aria-label="Catalogo de Coches">
+    <ul class="pagination">
+        <!--<li *ngFor="let coche of stock" [class.active]="coche == coche1">-->
+            <a>{{coche.marca}} {{coche.modelo}}</a>
+        <!--</li>    -->
+    </ul>
+</nav>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Catalogo Coches</h3>
+    </div>
+    <div class="panel-body">
+        <div *ngFor="let cocheIteracion of stock">
+            <!-- llamda componente Hijo -->
+            <app-coche [cocheParametro]="cocheIteracion"
+                       (cocheSeleccionado)="recibirCoche($event)">
+            </app-coche>
+        </div>
+    </div>
+</div>
+
+
 
