--- a/src/app/concesionario/concesionario.component.html
+++ b/src/app/concesionario/concesionario.component.html
@@ -2,27 +2,45 @@
 <p>Ejemplo de un componente padre <b>ConcesionarioComponent</b> e hijo <b>CocheComponent</b>
 y aprender a pasar parametros de uno a otro con <code>@input</code><code>@output</code></p>
 
+
 <nav aria-label="Catalogo de Coches">
     <ul class="pagination">
-        <!--<li *ngFor="let coche of stock" [class.active]="coche == coche1">-->
+        <li *ngFor="let coche of stock" [class.active]="coche == coche1">
             <a>{{coche.marca}} {{coche.modelo}}</a>
-        <!--</li>    -->
+        </li>    
     </ul>
 </nav>
 
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">Catalogo Coches</h3>
-    </div>
-    <div class="panel-body">
-        <div *ngFor="let cocheIteracion of stock">
-            <!-- llamda componente Hijo -->
-            <app-coche [cocheParametro]="cocheIteracion"
-                       (cocheSeleccionado)="recibirCoche($event)">
-            </app-coche>
+<div class="row">
+
+    <div class="col-md-2">
+        <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Catalogo Coches</h3>
+                </div>
+                <div class="panel-body">
+                   
+                    <!-- llamda componente Hijo -->
+                    <app-listado [stockParametro]="stock"
+                                 (eventoEmitir)="recibirCoche($event)"></app-listado>
+                   
+                </div>
         </div>
-    </div>
+    </div>   
+
+    <div class="col-md-10">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Comparador</h3>
+            </div>
+            <div class="panel-body">
+                
+                <!-- llamda componente Hijo -->
+                <app-coche [c1]="coche1" [c2]="coche2"></app-coche>
+                <app-coche [c1]="coche2" [c2]="coche1"></app-coche>
+                
+            </div>
+        </div>
+    </div>    
+
 </div>
-
-
-
