--- a/src/app/concesionario/listado/listado.component.html
+++ b/src/app/concesionario/listado/listado.component.html
@@ -1,3 +1,5 @@
-<p>
-  listado works!
-</p>
+<ul>
+  <li *ngFor="let coche of stock">
+      <a (click)="seleccionar($event, coche)">{{coche.marca}} {{coche.modelo}}</a>
+  </li>    
+</ul>
