nuevo ejercicio recetario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
           <li routerLinkActive="" class="menu"><a [routerLink]="['propiedades']">Propiedades</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['usuario']">Usuario</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['concesionario']">Concesionario</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['recetario']">Recetario</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
