--- a/src/app/concesionario/listado/listado.component.scss
+++ b/src/app/concesionario/listado/listado.component.scss
@@ -1,17 +1,4 @@
-ul{
-       list-style: circle;
-}
-
-ul li{
-    color: black;
-}
-
-   li:hover{
-    background: 87ceeb;
-}
-li:active{
-    background: #87ceeb;
- }
- li:visited{
-   background: #87ceeb;
+ul li a.active{
+    background-color: teal;
+    color: white;
 }
