--- a/src/app/concesionario/concesionario.component.html
+++ b/src/app/concesionario/concesionario.component.html
@@ -1,19 +1,19 @@
-<h2>Concesionario de Coches</h2>
+
 <p>Ejemplo de un componente padre <b>ConcesionarioComponent</b> e hijo <b>CocheComponent</b>
 y aprender a pasar parametros de uno a otro con <code>@input</code><code>@output</code></p>
 
 
 <nav aria-label="Catalogo de Coches">
-    <ul class="pagination">
+    <h1>CONCESIONARIO DE COCHES</h1>
+    <!--<ul class="pagination">
         <li *ngFor="let coche of stock" [class.active]="coche == coche1">
             <a>{{coche.marca}} {{coche.modelo}}</a>
         </li>    
-    </ul>
+    </ul>-->
 </nav>
 
 <div class="row">
-
-    <div class="col-md-2">
+     <div class="col-md-2">
         <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Catalogo Coches</h3>
