--- a/src/app/concesionario/concesionario.component.scss
+++ b/src/app/concesionario/concesionario.component.scss
@@ -1,3 +1,15 @@
+
+h1{
+    text-align: center;
+    color: teal;
+}
 h2{
     text-align: center;
+}
+
+
+.panel-list-coches{
+    padding: 0;
+    height: 50vh;
+    overflow-y: scroll;
 }
