--- a/src/app/concesionario/listado/listado.component.html
+++ b/src/app/concesionario/listado/listado.component.html
@@ -1,5 +1,6 @@
+<input [(ngModel)] = "searchText" placeholder="Busca tu coche">
 <ul>
-  <li *ngFor="let coche of stock">
-      <a (click)="seleccionar($event, coche)">{{coche.marca}} {{coche.modelo}}</a>
+  <li  *ngFor="let coche of stock | filter: searchText">
+      <a (click)="seleccionar($event, coche)" [class.active] = "coche ==coche1 || coche == coche2">{{coche.marca}} {{coche.modelo}}</a>
   </li>    
 </ul>
