--- a/src/app/recetario/receta-detalle/receta-detalle.component.html
+++ b/src/app/recetario/receta-detalle/receta-detalle.component.html
@@ -6,9 +6,13 @@
     <h2>Ingredientes:</h2>
       <ul>
         <li>Patatas</li>
-
-
+        <li>Patatas</li>
+        <li>Patatas</li>
+        <li>Patatas</li>
         
+
+
+
         
       </ul>
     </div>
