recetario sin filtro

--- a/src/app/recetario/recetario.component.scss
+++ b/src/app/recetario/recetario.component.scss
@@ -2,3 +2,13 @@ h1{
     text-align: center;
     color: #990116;
 }
+
+.buscador{
+    margin-bottom:20px;
+    margin-left: 15px;
+
+    .lupa{
+        margin-left: 10px;
+    }
+    
+}
