--- a/src/app/recetario/detalle/detalle.component.html
+++ b/src/app/recetario/detalle/detalle.component.html
@@ -1,4 +1,4 @@
-<h3>{{receta.nombre}}</h3> 
+<h3>Receta de {{receta.nombre}}</h3> 
 <div class="row">
   <div class="col-xs-5">
     <img src="{{receta.imagen}}" alt="{{receta.imagen}}" class="img-thumbnail">
@@ -10,9 +10,9 @@
           
           <h4 (click)="showIngredientes()">Ingredientes:
             <span class="badge">{{receta.ingredientes.length}}</span> <!--Badges o burbujas para contar el número de ingredientes-->
-            <span class="glyphicon {{receta.glyphicon}}" aria-hidden="true"></span>
+            <!--<span class="glyphicon {{glyphicon}}" aria-hidden="true"></span>-->
           </h4>
-            <ol *ngIf="show">
+            <ol>
               <li  *ngFor="let ingre of receta.ingredientes">
                  {{ingre}}
               </li>
@@ -24,7 +24,7 @@
 <div class="row">
     <div class="caption">
         <p>
-          <span class="cocinero">{{receta.cocinero}}</span>
+          <span class="cocinero"><b>Autor:</b> {{receta.cocinero}}</span>
           <span class="label label-primary likes" (click)="sumarLike()">{{receta.likes}} Likes</span>  
         </p>
       </div>
