--- a/src/app/recetario/detalle/detalle.component.scss
+++ b/src/app/recetario/detalle/detalle.component.scss
@@ -1,10 +1,18 @@
+.caption{
+    margin-top: 25px;
+    margin-bottom: 25px;
+
 .cocinero{
     text-align: center;
-    margin: 10px;
-    padding: 15px;
+    padding: 45px;
+}
+.label{
+    padding: 10px;
 }
 .likes{
     text-align: right;
+    font-size: 0.875em;
+}
 }
 .descripcion{
     text-align: justify;
@@ -22,4 +30,10 @@
 span.imagen{
     float: right;
     margin-right: 10px;
+    }
+    h3{
+        text-align: left;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 2.250em;
+        color: #B4340D;
     }
