--- a/src/app/recetario/recetario.component.html
+++ b/src/app/recetario/recetario.component.html
@@ -1,6 +1,12 @@
-<h1>RECETARIO WEB</h1>
-<div class="row">
 
+    <h1> <img src="./assets/img/chef.png" alt="recetario Web"> RECETARIO WEB</h1>
+
+
+
+<div class="row">
+  <div class="buscador">
+      <input [(ngModel)] = "searchText" placeholder="Busca tu Receta"><img class="lupa" src="./assets/img/magnifier.png" alt="lupa buscador">
+  </div>
 </div>
 <div class="row">
   <div class="col-xs-3">
@@ -10,8 +16,8 @@
       </div>
     </div>
     <div class="panel-body">
-        <ul>
-            <li *ngFor="let receta of recetas" (click)="seleccionarReceta(receta)">{{receta.nombre}}</li>
+        <ul >
+            <li *ngFor="let receta of recetas | filter: searchText" (click)="seleccionarReceta(receta)">{{receta.nombre}}</li>
           </ul>  
     </div>  
   </div>
@@ -22,7 +28,7 @@
             <h3 class="panel-title">Detalle de las recetas</h3>
         </div>
         <div class="panel-body">
-           <app-detalle [receta]="recetaSelec"></app-detalle>
+           <app-detalle [receta]="recetaSelec "></app-detalle>
         </div>
     </div>
   </div>
