--- a/src/app/recetario/detalle/detalle.component.html
+++ b/src/app/recetario/detalle/detalle.component.html
@@ -1,36 +1,34 @@
-<h3>Receta de {{receta.nombre}}</h3> 
 <div class="row">
-  <div class="col-xs-5">
-    <img src="{{receta.imagen}}" alt="{{receta.imagen}}" class="img-thumbnail">
-    <img src="assets/img/gluten_icon.png" *ngIf="!receta.isGlutenFree" alt="Gluten icon" class="imagen">
-    <img src="assets/img/gluten_free_icon.png" *ngIf="receta.isGlutenFree" alt="Gluten free icon" class="imagen">
-  </div>
-  <div class="col-xs-7">
-      <section class="ingredientes">
-          
-          <h4 (click)="showIngredientes()">Ingredientes:
-            <span class="badge">{{receta.ingredientes.length}}</span> <!--Badges o burbujas para contar el número de ingredientes-->
-            <!--<span class="glyphicon {{glyphicon}}" aria-hidden="true"></span>-->
-          </h4>
-            <ol>
-              <li  *ngFor="let ingre of receta.ingredientes">
-                 {{ingre}}
-              </li>
-            </ol>
-        </section>
 
-  </div>
-</div>
-<div class="row">
-    <div class="caption">
-        <p>
-          <span class="cocinero"><b>Autor:</b> {{receta.cocinero}}</span>
-          <span class="label label-primary likes" (click)="sumarLike()">{{receta.likes}} Likes</span>  
+    <h2>{{receta.nombre}}</h2>
+  
+    <div class="receta-content">
+      
+      <div class="col-md-5">    
+        <a class="thumbnail">
+          <img class="img-rounded" src="{{receta.imagen}}" alt="{{receta.nombre}}" data-toggle="modal">
+          <img [src]=" (receta.isGlutenFree) ? 'assets/img/gluten_free_icon.png' : 'assets/img/gluten_icon.png' " alt="info gluten" class="icono-gluten">
+        </a>
+        <p id="pieFoto">
+          <span id="cocinero"><b> Autor:</b> &nbsp;{{receta.cocinero}}</span>
+          <span class="glyphicon glyphicon-heart" aria-hidden="true" (click)="sumLike()"> {{receta.likes}}</span>
+          
         </p>
+        
       </div>
-</div>
-<div class="row">
-    <p class="descripcion">
-        {{receta.descripcion}}
-    </p>
-</div>
+      
+      <div class="col-md-7">
+          <h4>Ingredientes</h4>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor='let ingrediente of receta.ingredientes'>{{ingrediente}}</li>
+        </ul>
+      </div> 
+  
+     
+      <div id="recetaDesc">
+        <p>{{receta.descripcion}}</p>
+      </div>
+  
+    </div>  
+  
+  </div>
