--- a/src/app/recetario/detalle/detalle.component.scss
+++ b/src/app/recetario/detalle/detalle.component.scss
@@ -1,39 +1,58 @@
-.caption{
-    margin-top: 25px;
-    margin-bottom: 25px;
+/* Estilos de RecetaDetalleComponent */
+.row{
+    margin-top: 30px;
+}
+.receta-content{
+    border: 1px solid #FF8C5D;
+    padding: 10px;      
+}
 
-.cocinero{
-    text-align: center;
-    padding: 45px;
+h2{
+    background-color: #FF8C5D;
+    color: #FFF;
+    padding: 5px 10px;
+    margin: 0;
 }
-.label{
-    padding: 10px;
-}
-.likes{
-    text-align: right;
-    font-size: 0.875em;
-}
-}
-.descripcion{
-    text-align: justify;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.000em;
-}
-.imagen{
-        width: 45px;
-        height: 45px;
+
+.thumbnail {
+    position: relative;
+
+    .icono-gluten {
         position: absolute;
-        left: 270px;
         top: 10px;
+        right: 10px;
+        width: 40px;
+        height: auto;
     }
+}
 
-span.imagen{
-    float: right;
-    margin-right: 10px;
+p {
+    font-size: 1.1em;
+    text-align: justify;
+}
+
+#pieFoto{
+
+    .glyphicon-heart {
+        color: red;
+        font-weight: 600;
     }
-    h3{
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 2.250em;
-        color: #B4340D;
+    
+    #cocinero {
+        float: right;
+        font-style: italic;
     }
+}
+
+#recetaDesc {
+    text-align: justify;
+}
+
+.modal-body {
+
+    width: 100%;
+
+    img {
+        width: inherit;
+    }
+}
