--- a/src/app/recetario/recetario.component.scss
+++ b/src/app/recetario/recetario.component.scss
@@ -1,14 +1,31 @@
-h1{
-    text-align: center;
-    color: #990116;
+/* Estilos de RecetarioComponent */
+
+#buscadorRecetas {
+    /* margin-bottom: 20px; */
+
+    .glyphicon-search {
+        top: 0;
+    }
 }
 
-.buscador{
-    margin-bottom:20px;
-    margin-left: 15px;
+#listaRecetas {
 
-    .lupa{
-        margin-left: 10px;
+    a.list-group-item {
+        position: relative;
+        .icono-gluten {
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            width: 25px;
+            height: auto;
+        }
     }
     
+    
+}
+#buscadorRecetas{
+    margin: 15px;
+}
+h1{
+    text-align: center;
 }
