--- a/src/app/recetario/recetario.component.scss
+++ b/src/app/recetario/recetario.component.scss
@@ -1,7 +1,7 @@
 /* Estilos de RecetarioComponent */
 
 #buscadorRecetas {
-    /* margin-bottom: 20px; */
+    margin: 15px;
 
     .glyphicon-search {
         top: 0;
@@ -23,9 +23,9 @@
     
     
 }
-#buscadorRecetas{
-    margin: 15px;
-}
+
 h1{
     text-align: center;
+    color: #4BA34B;
+    font-weight: 600;
 }
