--- a/src/app/recetario/detalle/detalle.component.scss
+++ b/src/app/recetario/detalle/detalle.component.scss
@@ -3,12 +3,12 @@
     margin-top: 30px;
 }
 .receta-content{
-    border: 1px solid #FF8C5D;
+    border: 1px solid #4BA34B;
     padding: 10px;      
 }
 
 h2{
-    background-color: #FF8C5D;
+    background-color: #4BA34B;
     color: #FFF;
     padding: 5px 10px;
     margin: 0;
