--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
           <li routerLinkActive="" class="menu"><a [routerLink]="['usuario']">Usuario</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['concesionario']">Concesionario</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['recetario']">Recetario</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['plantilla']">Plantilla</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
