--- a/src/app/concesionario/listado/listado.component.scss
+++ b/src/app/concesionario/listado/listado.component.scss
@@ -1,4 +1,10 @@
 ul li a.active{
-    background-color: teal;
-    color: white;
+  
+    color: blue;
+    font-weight: 600;
+}
+input{
+    width: 100%;
+    padding-left: 10px;
+    font-style: italic;
 }
