--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -45,13 +45,12 @@
        
 
 }
-.nuevaTarea{
-        float: right;
-        font-size: 1.2em;
-        a{
-                color: black;
-                font-size: 1.2em;
-        }
-       
+.nuevaT{
+        margin-left: 25px;
+        margin-bottom: 20px;
+
+}
+.glyphicontachado{
+        text-decoration:line-through;
 
 }
