--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,20 +1,17 @@
 <div id="todos">
-  <section>
-      <h2>Lista Tareas</h2>
-      <ul>
-        <li *ngFor = "let todo of todos">
-            <input type="checkbox" [checked]="todo.completed" (click)="modificarCheck()">{{todo.id}} {{todo.title}}
-            <div class="iconos">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true" (click)="eliminarTarea()">Eliminar</span>
-                    <span class=" glyphicon glyphicon-pencil" aria-hidden="true" (click)="modificarTarea()">Modificar</span>
-            </div>
-            
-        </li>
-       
-      </ul>
-      <div class="nuevaTarea">
-            <span class=" glyphicon glyphicon-plus" aria-hidden="true" (click)="anadirTarea()">Nueva Tarea</span>
-      </div>
-      
-  </section>
+    <section>
+
+        <h2>Lista Tareas</h2>
+        <input type="text" placeholder="Introduce una nueva tarea" class="nuevaT" size="100">
+        <span class="glyphicon glyphicon-plus" (click)="anadirNuevaTarea()"></span>
+        <ul>
+            <li *ngFor="let todo of todos">
+                <input type="checkbox" [checked]="todo.completed">{{todo.id}} {{todo.title}}
+                <span class="glyphicon glyphicon-trash "  aria-hidden="true" (click)="eliminarTarea(todo)" [(ngModel)]="tachado"></span>
+                <span class=" glyphicon glyphicon-pencil" aria-hidden="true" (click)="modificarTarea(todo)"></span>
+            </li>
+        </ul>
+
+
+    </section>
 </div>
