--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -35,6 +35,9 @@
                 }
         }
 }
+.terminada{
+        text-decoration: line-through;
+    }
 .iconos{
         float: right;
         margin-right: 10px;
