--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,10 @@ p{
 
 
 footer{
+    background-color: #FCFCFC;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+    margin-top: 15px;
     
 }
