--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,8 @@
           <li routerLinkActive="" class="menu"><a [routerLink]="['recetario']">Recetario</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['plantilla']">Plantilla</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['todos']">Todos</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['formulario-basico']">Formulario Básico</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['bodega']">Bodega</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
