--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
           <li routerLinkActive="" class="menu"><a [routerLink]="['todos']">Todos</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['formulario-basico']">Formulario Básico</a></li>
           <li routerLinkActive="" class="menu"><a [routerLink]="['bodega']">Bodega</a></li>
+          <li routerLinkActive="" class="menu"><a [routerLink]="['inmobiliaria']">Inmobiliaria</a></li>
        </ul>
       </div><!--/.nav-collapse -->
     </div>
