--- a/src/app/inmobiliaria/casa/casa.component.scss
+++ b/src/app/inmobiliaria/casa/casa.component.scss
@@ -1,8 +1,8 @@
 #nombreCasa{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.75em;
+    font-size: 1.85em;
     text-transform: uppercase;
-    text-align: left;
+    text-align: center;
     padding-left: 25px;
 }
 .imagen{
@@ -12,12 +12,27 @@
 span#precioCasa{
     float: right;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.25em;
+    font-size: 2em;
     font-weight: 600;
+    color: #2C3E50;
+   
     
 }
 .direccion{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size:1.250em;
     text-align: justify;
+    margin-top: 50px;
+}
+
+.thumbnail {
+    position: relative;
+
+    .cartelVentaAlquiler {
+        position: absolute;
+        top: 70px;
+        right: 10px;
+        //width: 40px;
+        height: auto;
+    }
 }
