--- a/src/app/inmobiliaria/inmobiliaria.component.scss
+++ b/src/app/inmobiliaria/inmobiliaria.component.scss
@@ -4,22 +4,21 @@ h1{
     color: #3398CE;
 }
 
-.thumbnail{
-   
-    span.nombreCasa{
-        float: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 1em;
-        font-weight: bold;
-    }
-    span.precio{
-        float: right;
-        font-size: 1em;
-    
-    }
+.caption h3 span{
+   font-size: 0.85em;
+    float: right;
 
 }
 
 #buscadorCasas{
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+}
+
+.thumbnail img{
+    height: 200px;
+    width: auto;
+    
+}
+.btn-group{
+    margin-bottom: 25px;
 }
